--- a/styles.css
+++ b/styles.css
@@ -130,7 +130,7 @@ body {
 
 .period {
     font-size: 0.95rem;
-    color: #000000; /* Change gray to black */
+    color: #000000; 
     font-style: italic;
 }
 
